# zwhide

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_and_publish.yml
zwhide/: __init__.py  hide.py
