[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
before-all = "python -m pip install mypy"

[tool.cibuildwheel.linux]
before-all = "sudo apt install python3-dev && python -m pip install mypy"

[tool.cibuildwheel.macos]
before-all = "xcode-select --install && python -m pip install mypy"
