# Package configuration
[metadata]
name = zwhide
author = Faholan
# TODO: add a description
description = Hide messages with Zero-width characters
url = https://github.com/Faholan/zwhide
project_urls =
    Issue tracker = https://github.com/Zeta-Labs-HQ/Riemann-s-toolbox/issues
keywords = discord, bot
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed


[options]
zip_safe = True
packages =
    zwhide
